<resources>
    <string name="app_name">Billing Chat</string>
    <string name="chat_title">CHAT WITH US</string>
    <string name="account_number">Account Number:</string>
    <string name="product_price">Product Price</string>
    <string name="taxes_surcharges_amp_fees">Taxes, surcharges &amp; fees</string>
    <string name="due_date">Due Date</string>
    <string name="total_due">Total due</string>
    <string name="send">Send</string>
    <string name="input_text">Please input some text...</string>
    <string name="current_statement_header">Here is your current statement:</string>
</resources>
